# DevGarden-projects-manager

./: .dockerignore  .env.example  .gitignore  .prettierignore  CHANGELOG.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  tauri-build-smoke.yml
apps/api/: Dockerfile  package.json  tsconfig.build.json  tsconfig.json  vitest.int.config.ts
apps/api/prisma/: schema.prisma
apps/api/src/: app.module.ts  health.controller.ts  main.ts
apps/client/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/client-runner/: package.json  tsconfig.json
apps/client-runner/scripts/: build.mjs
apps/client-runner/src/: bootstrap.spec.ts  bootstrap.ts  clone.spec.ts  clone.ts  main.spec.ts  main.ts  run-executor.spec.ts  run-executor.ts
apps/client/scripts/: copy-runner.mjs  gen-icon-source.mjs
apps/client/src/: App.tsx  globals.css  main.tsx
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/icons/: README.md  icon.icns
apps/client/src-tauri/src/: lib.rs  main.rs  sidecar.rs
apps/web/: Dockerfile  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
apps/web/e2e/: auth-fixture.ts  (+30 more)
docs/: ARCHITECTURE.md  CONVENTIONS.md  HARNESS-FORMAT.md  ROADMAP.md  SECURITY.md  SELF-HOSTING.md  SPEC.md  TESTING.md  db-schema.md
infra/: README.md  backup.sh  docker-compose.dev.yml  docker-compose.yml  restore.sh
infra/backups/: .gitignore
(+233 files in other folders)
